--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^4.0.3",
     "react-xml-parser": "^1.1.8",
     "recoil": "^0.7.6",
+    "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "xml-js": "^1.6.11"
   },
