--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^4.0.3",
     "react-xml-parser": "^1.1.8",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26"
   }
 }
