--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/xml2js": "^0.4.11",
+    "apexcharts": "^3.36.3",
     "assert": "^2.0.0",
     "axios": "^1.2.1",
     "buffer": "^6.0.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.4.5",
